added: portfolio.html, styles.css, a few images and a lot of edits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,45 +1,62 @@
 {
   "cSpell.words": [
     "активом",
+    "баскетбол",
     "бизнеса",
+    "білі",
+    "були",
     "вашего",
+    "видні",
     "влечет",
     "Внимание",
     "Герой",
+    "глобальні",
     "демьяненко",
     "Демьяненко",
     "десктопные",
     "деталям",
     "дизайнерские",
     "другие",
+    "елементи",
     "ермаков",
     "Ермаков",
     "заданий",
     "Задача",
     "Заказать",
     "занимаемся",
+    "зміни",
     "Значимость",
     "значительной",
     "игорь",
     "Игорь",
     "Идейные",
+    "Издание",
     "кадров",
     "Киев",
+    "колір",
     "команда",
     "консультация",
     "Контакты",
     "контент",
+    "коробки",
     "Леси",
+    "логотип",
+    "макета",
+    "Маркетинг",
     "место",
     "михаил",
     "Михаил",
     "мобильные",
+    "монитор",
     "Навигация",
     "настолько",
+    "наушники",
     "начало",
     "Наша",
     "николай",
     "Николай",
+    "ноутбук",
+    "ноутбуке",
     "образом",
     "обуславливает",
     "обучения",
@@ -55,17 +72,26 @@
     "Подвал",
     "позиции",
     "Портфолио",
+    "Постер",
     "Преимущества",
+    "Приложение",
+    "Приложения",
     "проблем",
+    "Проект",
     "Пунктуальность",
+    "работа",
     "работы",
     "Равным",
     "рамки",
     "реализация",
     "репина",
     "Репина",
+    "Ресторан",
+    "ресторана",
     "решения",
+    "сайт",
     "сайта",
+    "сайты",
     "собой",
     "Современные",
     "соображения",
@@ -75,14 +101,22 @@
     "также",
     "тарасов",
     "Тарасов",
+    "Технокряк",
     "технологии",
     "Украинки",
     "Уникальный",
     "услугу",
+    "фоновий",
     "формированию",
     "Шапка",
     "широким",
     "этих",
-    "Эффективные"
+    "Эффективные",
+    "adress",
+    "comand",
+    "conts",
+    "navi",
+    "Orlean",
+    "projekt"
   ]
 }
